--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run Tests
-        run: npm run test
+      #- name: Run Tests
+      #  run: npm run test
 
       - name: Build Project
         run: npm run build
